cf/Codeforces Round 951 Div. 2/C_Earning_on_Bets/Tests/error.txt
Command failed: g++ -o "/home/tom/Desktop/acm/Codeforces Round 951 Div. 2/C_Earning_on_Bets/Tests/a.out" "/home/tom/Desktop/acm/Codeforces Round 951 Div. 2/C_Earning_on_Bets/C_Earning_on_Bets.cpp" -std=c++14
/home/tom/Desktop/acm/Codeforces Round 951 Div. 2/C_Earning_on_Bets/C_Earning_on_Bets.cpp: In function ‘void solve()’:
/home/tom/Desktop/acm/Codeforces Round 951 Div. 2/C_Earning_on_Bets/C_Earning_on_Bets.cpp:16:55: error: ‘lcm’ was not declared in this scope
   16 |     for (int i = 1; i <= n; i ++ ) cin >> v[i], LCM = lcm(v[i], LCM);
      |                                                       ^~~
